--- a/public/css/principal.css
+++ b/public/css/principal.css
@@ -1,18 +1,36 @@
+/* Rules for the whole app */
+
+/* fonts */
+
+@font-face {
+  font-family: Action_Man;
+  src: url('./fonts/Action_Man.ttf');
+}
 
 
-    html, body {
-        width: 100%;
-        height: 100%;
-        margin: 0;
-        background:#f3f7fc;
-    }
-  div#divAll{
-        width: 100%; 
-        height: 100%;
-        background: red;
-    }
-    #divLeading{
-        width: 200px;
-    }
+/* Interface Styles */
+html, body {
+  width   : 100%;
+  height  : 100%;
+  margin  : 0;
+  padding : 0;
+}
+ 
+#bc {
+  width   : 100%;
+  height  : 100%;
+  margin  : 0;
+  padding : 0;
+}
 
-  
+#sidebar {
+  width   : 15%;
+  padding : 0;
+  margin  : 0;
+}
+
+#center_pane {
+  margin  : 0;
+  padding : 0;
+}
+
