--- a/public/units/debitors/index.css
+++ b/public/units/debitors/index.css
@@ -1,4 +1,8 @@
 #bika-units-debitors-tabcontainer {
-  width: 50px;
-  height: 20px;
+  width: 100%;
+  height: 50%;
+}
+
+#bika-units-debitors-grid {
+  height: 49%;
 }
