significantly improved font-face; adjusted css for main index.html

--- a/public/css/principal.css
+++ b/public/css/principal.css
@@ -10,9 +10,10 @@
 
 
 /* Interface Styles */
+
 html, body {
   width   : 100%;
-  height  : 100%;sid
+  height  : 100%;
   margin  : 0;
   padding : 0;
 }
@@ -22,6 +23,7 @@ html, body {
   height  : 100%;
   margin  : 0;
   padding : 0;
+  border  : none;
 }
 
 #bika-sidebar {
@@ -29,6 +31,7 @@ html, body {
   padding : 0;
   margin  : 0;
   position: relative;
+  border: none;
 }
 
 #bika-center-panel {
@@ -40,8 +43,7 @@ html, body {
   font-family: Arial, sans-serif;
   height: 50px;
   width: 100%;
-  border-bottom: thin solid #b8b8b9;
-  overflow: hidden;
+  background: #ececec;
 }
 
 .bika-dock ul {
@@ -53,15 +55,15 @@ html, body {
 }
 
 .bika-dock li {
-  font-size: 2em;
-  width: 50px;
-  height: 50px;
-  float: right;
-  text-align: center;
-  font-weight: bold;
-  cursor: auto;
-  border: solid 1px #b8b8b9;
-  background: #ececec;
+  font-size   : 2em;
+  width       : 50px;
+  height      : 50px;
+  float       : right;
+  text-align  : center;
+  font-weight : bold;
+  cursor      : auto;
+  border      : solid 1px #b8b8b9;
+  background  : #ececec;
 }
 
 .bika-dock li a, 
@@ -85,10 +87,10 @@ html, body {
 
 /*Gross CSS - element styles need aligning*/
 #bika-application-select { 
-  position: absolute;
-  left : 0px;
-  bottom: 0px;
-  width: 100%;
+  position : absolute;
+  left     : 0;
+  bottom   : 0;
+  width    : 100%;
 }
 
 #bika-application-select .dijitSelect { 
