--- a/public/units/debitors/forms/general.css
+++ b/public/units/debitors/forms/general.css
@@ -6,9 +6,11 @@
   margin: 0;
 }
 
-fieldset.tab {
+.tab fieldset {
   height: 100%;
   width: 30%;
+  padding: 0;
+  margin: 0;
 }
 
 .tab label {
@@ -25,9 +27,3 @@ fieldset.tab {
   float: right;
 }
 
-/* hack to get around dijits floating left */
-.tab .dijit {
-  float: right;
-  display: block;
-  padding: 2.5px;
-}
