--- a/public/units/debitors/forms/invoicing.css
+++ b/public/units/debitors/forms/invoicing.css
@@ -1,7 +1,36 @@
-.facturation {
-  float         : right;
-  right         : 20px;
-  width         : 98%;
-  border        : 1px solid #ABC8E2;
-  border-radius : 3px;
+.bika-form {
+  overflow: hidden;
+  padding: 0;
+  margin: 0;
+}
+
+.bika-form fieldset {
+  border: none;
+  height: 100%;
+  width: 30%;
+  padding: 1em;
+  margin: 0;
+  display: block;
+  float: left;
+}
+
+.bika-form label {
+  display: block;
+  clear: both;
+}
+
+/* leave checkboxes alone */
+.bika-form input:not([type=checkbox]) {
+  float: right;
+  width: 73%;
+}
+
+.bika-form button {
+  float: right;
+  clear: both;
+}
+
+.bika-form select {
+  float: right;
+  width: 74%;
 }
