--- a/public/units/debitors/forms/note.css
+++ b/public/units/debitors/forms/note.css
@@ -1,12 +1,48 @@
-#bika-units-debitors-forms-note-form {
-  height: 100%;
-  width: 100%;
-  margin: 0;
+.bika-form {
+  overflow: hidden;
   padding: 0;
+  margin: 0;
+  height: 100%;
 }
 
-#bika-units-debitors-forms-note-form textarea {
+.bika-form form {
+  height: 95%;
+
+}
+
+.bika-form fieldset {
+  border: none;
+  height: 100%;
+  width: 30%;
+  padding: 1em;
+  margin: 0;
+  display: block;
+  float: left;
+}
+
+.bika-form label {
+  display: block;
+  clear: both;
+}
+
+/* leave checkboxes alone */
+.bika-form input:not([type=checkbox]) {
+  float: right;
+  width: 73%;
+}
+
+.bika-form button {
+  float: right;
+  clear: both;
+}
+
+.bika-form select {
+  float: right;
+  width: 74%;
+}
+
+.bika-form textarea {
   width: 100%;
-  height: 90%;
+  height: 100%;
   border: 1px dotted black;
 }
